[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/Mukta/Mukta-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/themes/mainTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/imgs/icons/round_close_white_24dp.png" type="Texture" id=3]
[ext_resource path="res://assets/imgs/icons/round_file_download_white_24dp.png" type="Texture" id=4]
[ext_resource path="res://scripts/GeneratedImage.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://assets/imgs/icons/round_close_gray_24dp.png" type="Texture" id=7]
[ext_resource path="res://assets/imgs/icons/round_file_download_gray_24dp.png" type="Texture" id=8]
[ext_resource path="res://assets/imgs/icons/round_arrow_forward_ios_white_24dp.png" type="Texture" id=9]
[ext_resource path="res://assets/imgs/icons/round_arrow_forward_ios_gray_24dp.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.188235, 0.176471, 0.25098, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2
shadow_offset = Vector2( 2, 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[node name="GeneratedImage" type="Control"]
margin_right = 333.0
margin_bottom = 180.0
rect_min_size = Vector2( 341, 180 )
focus_mode = 2
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 145.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 316.0 ]
}

[node name="Panel" type="Panel" parent="."]
margin_right = 333.0
margin_bottom = 180.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 160.0
margin_bottom = 160.0
color = Color( 0.133333, 0.12549, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="TextureRect" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 140, 140 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 171.0
margin_top = 13.0
margin_right = 304.0
margin_bottom = 44.0
text = "Hello Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="RichTextLabel" parent="."]
margin_left = 171.0
margin_top = 44.0
margin_right = 304.0
margin_bottom = 165.0
custom_fonts/normal_font = SubResource( 6 )
text = "Tiles printed: 10323
Tile Size: 16x16
Time: 500ms
Mirror: False
Noch mehr text"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="TextureButton" parent="."]
margin_left = 304.0
margin_top = 5.0
margin_right = 352.0
margin_bottom = 53.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="download" type="TextureButton" parent="."]
margin_left = 304.0
margin_top = 29.0
margin_right = 352.0
margin_bottom = 77.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scollUp" type="TextureButton" parent="."]
margin_left = 307.0
margin_top = 145.0
margin_right = 355.0
margin_bottom = 193.0
rect_rotation = 270.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scollDown" type="TextureButton" parent="."]
margin_left = 326.0
margin_top = 145.0
margin_right = 374.0
margin_bottom = 193.0
rect_rotation = 90.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="download" to="." method="_on_download_pressed"]
[connection signal="pressed" from="scollUp" to="." method="_on_scollUp_pressed"]
[connection signal="pressed" from="scollDown" to="." method="_on_scollDown_pressed"]
